// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NetworkPill renders a NetworkPill with border 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#2098531a",
      "borderBottomLeftRadius": 999999,
      "borderBottomRightRadius": 999999,
      "borderBottomWidth": 1,
      "borderColor": "#209853",
      "borderLeftWidth": 1,
      "borderRightWidth": 1,
      "borderStyle": "solid",
      "borderTopLeftRadius": 999999,
      "borderTopRightRadius": 999999,
      "borderTopWidth": 1,
      "flexDirection": "row",
      "gap": 8,
      "justifyContent": "center",
      "paddingBottom": 8,
      "paddingLeft": 4,
      "paddingRight": 4,
      "paddingTop": 8,
    }
  }
>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.4}
    style={
      {
        "color": "#209853",
        "fontFamily": "Basel-Book",
        "fontSize": 17,
        "lineHeight": 24,
        "paddingTop": 1,
      }
    }
    suppressHighlighting={true}
  >
    Görli
  </Text>
</View>
`;

exports[`NetworkPill renders a NetworkPill without image 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#2098531a",
      "borderBottomLeftRadius": 999999,
      "borderBottomRightRadius": 999999,
      "borderBottomWidth": 1,
      "borderColor": "transparent",
      "borderLeftWidth": 1,
      "borderRightWidth": 1,
      "borderStyle": "solid",
      "borderTopLeftRadius": 999999,
      "borderTopRightRadius": 999999,
      "borderTopWidth": 1,
      "flexDirection": "row",
      "gap": 8,
      "justifyContent": "center",
      "paddingBottom": 8,
      "paddingLeft": 4,
      "paddingRight": 4,
      "paddingTop": 8,
    }
  }
>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.4}
    style={
      {
        "color": "#209853",
        "fontFamily": "Basel-Book",
        "fontSize": 17,
        "lineHeight": 24,
        "paddingTop": 1,
      }
    }
    suppressHighlighting={true}
  >
    Görli
  </Text>
</View>
`;

exports[`NetworkPill renders an InlineNetworkPill 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#2098531a",
      "borderBottomLeftRadius": 8,
      "borderBottomRightRadius": 8,
      "borderBottomWidth": 1,
      "borderColor": "transparent",
      "borderLeftWidth": 1,
      "borderRightWidth": 1,
      "borderStyle": "solid",
      "borderTopLeftRadius": 8,
      "borderTopRightRadius": 8,
      "borderTopWidth": 1,
      "flexDirection": "row",
      "gap": 8,
      "justifyContent": "center",
      "paddingBottom": 0,
      "paddingLeft": 4,
      "paddingRight": 4,
      "paddingTop": 0,
    }
  }
>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.2}
    style={
      {
        "color": "#209853",
        "fontFamily": "Basel-Medium",
        "fontSize": 15,
        "fontWeight": "500",
        "lineHeight": 16,
        "paddingTop": 1,
      }
    }
    suppressHighlighting={true}
  >
    Görli
  </Text>
</View>
`;
